--- a/app/app.html
+++ b/app/app.html
@@ -14,6 +14,8 @@
         }
       }());
     </script>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
