--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dev Toolkit</title>
+    <title>Project Companion</title>
     <script>
       (function() {
         if (!process.env.HOT) {
