--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project Companion</title>
+    <title>Dev Companion</title>
     <script>
       (function() {
         if (!process.env.HOT) {
@@ -14,7 +14,7 @@
         }
       }());
     </script>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Lato|Tajawal" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Tajawal" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
